--- a/coc-settings.json
+++ b/coc-settings.json
@@ -77,6 +77,15 @@
     "explorer.file.showHiddenFiles": true,
     "explorer.icon.enableNerdfont": true,
     "explorer.file.reveal.whenOpen": true,
+    "explorer.quitOnOpen": true,
+    "explorer.previewAction.onHover": "content",
+    "explorer.previewAction.content.maxHeight": 90,
+    "explorer.file.hiddenRules": {
+        "filenames": [
+            ".git"
+        ],
+        "patternMatches": []
+    },
     //coc-webview
     "webview.colorStrategy": "dark",
     "suggest.noselect": false,
